--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,11 @@ nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
 }
+
+.centered {
+   left:50%;
+}
+
 a {
     text-decoration: none;
     color: #999;
