--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,5 @@
 body {
-    margin: 60px auto;
-    width: 70%;
+    margin: 0px auto;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -14,11 +13,9 @@ nav ul li, footer ul li {
 }
 
 
-
-
 a {
     text-decoration: none;
-    color: blue;
+    color: #EEEEEE;
 }
 a:hover {
     text-decoration: underline;
