--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ nav ul li, footer ul li {
 
 a {
     text-decoration: none;
-    color: blue;
+    color: #EEEEEE;
 }
 a:hover {
     text-decoration: underline;
