--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,10 @@ nav ul li, footer ul li {
     margin-right: 20px;
 }
 
+nav ul li a {
+  color:#668B8B;
+}
+
 a {
     text-decoration: none;
     color: #EEEEEE;
