--- a/css/main.css
+++ b/css/main.css
@@ -17,9 +17,13 @@ nav ul li a {
   color:#668B8B;
 }
 
+div ul li a {
+  color:#EEEEEE;
+}
+
 a {
     text-decoration: none;
-    color: #EEEEEE;
+    color: blue;
 }
 a:hover {
     text-decoration: underline;
