--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,12 @@ h1 {
 h3 {
     color: black;
 }
+
+.icon_on_background {
+  color:#424242 !important;
+  font-size:20px;"
+}
+
 hr {
   height:1px;
   border:none;
